[project]
name = "sdss2025"
version = "0.1.0"
description = "Urban Morphology with Python: City Structure as Predictor and Target"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.7.2",
    "clustergram>=0.8.1",
    "folium>=0.19.5",
    "geopandas>=1.0.1",
    "geoplanar>=0.4.0",
    "geopy>=2.4.1",
    "ipywidgets>=8.1.6",
    "jupyterlab>=4.4.0",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.1",
    "momepy>=0.10.0",
    "neatnet>=0.0.5",
    "numba>=0.61.2",
    "osmnx>=2.0.2",
    "scikit-learn>=1.6.1",
]


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
momepy = ">0.9"
geopandas = ">=1.0.1,<2"
shapely = ">=2.1.0,<3"
scikit-learn = ">=1.6.1,<2"
numba = ">=0.61.2,<0.62"
jupyterlab = ">=4.4.0,<5"
ipywidgets = ">=8.1.6,<9"
osmnx = ">=2.0.2,<3"
geopy = ">=2.4.1,<3"
clustergram = ">=0.8.1,<0.9"
bokeh = ">=3.7.2,<4"
ruff = ">=0.11.5,<0.12"
neatnet = ">=0.1.0,<0.2"
